# uv-assignment

packaged-app/: README.md  pyproject.toml
packaged-app/src/packaged_app/: main.py
simple-app/: README.md  main.py  pyproject.toml
