[project]
name = "packaged-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "danishballshore", email = "danish.b@allshorestaffing.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
packaged-app = "packaged_app:main"
main = "packaged_app.main:greet"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
