[project]
name = "packaged-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "danishballshore", email = "danish.b@allshorestaffing.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.2.11",
]

[project.scripts]
packaged-app = "packaged_app:main"
myagent = "packaged_app.main:run_agent"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
